# cargo-sync-rdme

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  justfile  release.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  cd.yml  ci.yml  pages.yml  update-deps.yml
docs/: configuration.md
examples/lib/: Cargo.toml  README.md
examples/lib/src/: lib.rs
scripts/: build-dist
src/: cli.rs  config.rs  diff.rs  lib.rs  macros.rs  main.rs  sync.rs  toml.rs  traits.rs  vcs.rs  with_source.rs
src/cli/: args.rs
src/config/: badges.rs  de.rs  metadata.rs  package.rs  tests.rs
src/sync/: contents.rs  marker.rs
src/sync/contents/: badge.rs  rustdoc.rs  title.rs
src/sync/contents/rustdoc/: code_block.rs  heading.rs  intra_link.rs
src/sync/marker/: find.rs  replace.rs
src/vcs/: git.rs
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
