[workspace]
members = ["xtask", "examples/lib"]

[package]
name = "cargo-sync-rdme"
version = "0.4.0"
edition = "2021"
rust-version = "1.78.0"
description = "Cargo subcommand to synchronize README with crate documentation"
readme = "README.md"
repository = "https://github.com/gifnksm/cargo-sync-rdme"
license = "MIT OR Apache-2.0"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["vcs-git"]
vcs-git = ["dep:git2"]
vendored-libgit2 = ["git2?/vendored-libgit2"]

[package.metadata.cargo-sync-rdme]
extra-targets = "./docs/configuration.md"

[package.metadata.cargo-sync-rdme.badge]
style = "flat-square"

[package.metadata.cargo-sync-rdme.badge.badges]
maintenance = true
license = { link = "#license" }
crates-io = true
docs-rs = true
rust-version = true
github-actions = { workflows = ["ci.yml"] }
codecov = true

[package.metadata.cargo-sync-rdme.badge.badges-maintenance]
maintenance = true
[package.metadata.cargo-sync-rdme.badge.badges-license]
license = true
[package.metadata.cargo-sync-rdme.badge.badges-crates-io]
crates-io = true
[package.metadata.cargo-sync-rdme.badge.badges-docs-rs]
docs-rs = true
[package.metadata.cargo-sync-rdme.badge.badges-rust-version]
rust-version = true
[package.metadata.cargo-sync-rdme.badge.badges-github-actions]
github-actions = true
[package.metadata.cargo-sync-rdme.badge.badges-codecov]
codecov = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[dependencies]
cargo_metadata = "0.19.1"
clap = { version = "4.5.23", features = ["derive"] }
console = "0.15.10"
git2 = { version = "0.19.0", default-features = false, optional = true }
miette = { version = "7.4.0", features = ["fancy"] }
once_cell = "1.20.2"
pulldown-cmark = "0.12.2"
pulldown-cmark-to-cmark = "20.0.0"
rustdoc-types = "0.33.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
similar = { version = "2.6.0", features = ["inline", "unicode"] }
tempfile = "3.14.0"
thiserror = "2.0.9"
toml = "0.5.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
void = "1.0.2"

[build-dependencies]

[profile.dev]

[profile.release]
strip = true

[badges]
maintenance = { status = "actively-developed" }

[dev-dependencies]
indoc = "2.0.5"
