[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-xtask = { version = "0.10.2", features = [
  "subcommand-dist-build-bin",
  "subcommand-dist-build-completion",
  "subcommand-dist-build-doc",
  "subcommand-dist-build-license",
  "subcommand-dist-build-man",
  "subcommand-dist-build-readme",
  "subcommand-dist-clean",
  "subcommand-dist",
  "main"
] }
cargo-sync-rdme = { path = ".." }
