[package]
name = "cargo-sync-rdme-example-lib"
version = "0.1.0"
edition = "2021"
readme = "README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.cargo-udeps.ignore]
normal = ["async-trait", "serde", "num"]

[package.metadata.cargo-sync-rdme.badge.badges]

[package.metadata.cargo-sync-rdme.rustdoc]
html-root-url = "https://gifnksm.github.io/cargo-sync-rdme/"

[dependencies]
async-trait = "0.1.59"
num = { version = "0.4.0", features = ["num-bigint"] }
serde = { version = "1.0.149", features = ["derive"] }
